// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders heading1 correctly 1`] = `
<Text
  accessibilityTraits="header"
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontFamily": ".SFUIDisplay-semibold",
        "fontSize": 20,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders heading2 correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontFamily": ".SFUIDisplay-bold",
        "fontSize": 16,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders modalActivityIndicatorAlertText correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#fff",
        "fontFamily": ".SFUIDisplay-semibold",
        "fontSize": 24,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders paragraph correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#7F91A7",
        "fontSize": 16,
        "lineHeight": 23,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders text correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      undefined,
      Object {
        "fontFamily": ".SFUIDisplay",
      },
    ]
  }
/>
`;

exports[`renders text with fontWeight bold 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      Object {
        "fontWeight": "bold",
      },
      Object {
        "fontFamily": ".SFUIDisplay-bold",
      },
    ]
  }
/>
`;

exports[`renders text with fontWeight semibold 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      Object {
        "fontWeight": "600",
      },
      Object {
        "fontFamily": ".SFUIDisplay-semibold",
      },
    ]
  }
/>
`;

exports[`renders textInput correctly 1`] = `
<TextInput
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "fontSize": 17,
      },
      undefined,
      Object {
        "fontFamily": ".SFUIDisplay",
      },
    ]
  }
/>
`;
